# lab-am

./: Audit_AI.md  README.md  lab.ipynb  lab_de_facut_la_lab.ipynb  main.ipynb  main.py  pyproject.toml  raw_ceva.py
